vs messo a posto in java, html in static
html in static, poi in templates per fare chianate rest

--- a/Prj_BookTherapy/src/main/resources/static/login.html
+++ b/Prj_BookTherapy/src/main/resources/static/login.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Book Therapy</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
+<body>
  <div class="page-container">
     <form id="loginForm" class="form-container">
       
       <!-- LOGO DENTRO IL FORM -->
       <div class="logo-container">
-        <img src="logo2.png" alt="Book Therapy Logo" />
+        <img src="/images/login/02-logo.png" alt="Logo">
       </div>
-    <form id="loginForm" class="form-container">
+
         <h2>Login</h2>
         <label for="username">Username (max:50):
             <input type="text" id="username" required  maxlength="50" >
@@ -29,9 +30,11 @@
         <button type="submit">Login</button>
     </form>
     <div class="registrati-link">
-  Non hai un account?
-  <a href="registrati.html">Registrati</a>
+      Non hai un account?
+      <a href="registrati.html">Registrati</a>
+    </div>
 </div>
 
+<script src="/js/script.js"></script>
 </body>
 </html>
