finita pagina home, da fare i collegamenti con  Thymeleaf

--- a/Prj_BookTherapy/src/main/resources/static/home.html
+++ b/Prj_BookTherapy/src/main/resources/static/home.html
@@ -20,10 +20,11 @@
             <img src="images/logo/01-logo.png" alt="Logo Book Therapy" />
             <span>Book Therapy</span>
         </a>
+
         </div>
         <div class="auth-buttons">
-        <button>Accedi</button>
-        <button>Registrati</button>
+        <a href="login.html" class="auth-btn">Accedi</a>
+        <a href="registrati.html" class="auth-btn">Registrati</a>
         </div>
     </header>
 
