--- a/Prj_BookTherapy/src/main/resources/static/home.html
+++ b/Prj_BookTherapy/src/main/resources/static/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css"> 
     <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/theme.css">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
