--- a/Prj_BookTherapy/src/main/resources/static/login.html
+++ b/Prj_BookTherapy/src/main/resources/static/login.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Book Therapy</title>
     <link rel="stylesheet" href="/css/login.css">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
  <div class="page-container">
